# CoffeeMaker-TP1-Concurrentes

./: Cargo.toml  README.md  orders.json
src/: coffee_maker.rs  constants.rs  container.rs  container_source_replenisher.rs  dispenser.rs  errors.rs  external_source_replenisher.rs  main.rs  order.rs  orders_queue.rs  orders_reader.rs  replenisher.rs  statistics.rs
tests/: consume_all.json  multiple_orders.json  replenish_containers.json  simple_order.json  skip_orders.json  wrong_format.json
