[package]
name = "brunograssano-tp1-2023-1c"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
std-semaphore = "0.1.0"
rand = "0.7"
